fix: Fine tune spacing for bookings boxes

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -78,7 +78,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3em;
+  padding: 6em;
 }
 
 .bookings {
@@ -107,6 +107,7 @@ h3,
   font-family: 'Trirong', serif;
   font-size: 1.4rem;
   color: #032A2E;
+  margin: 0;
 }
 
 .bookings-div {
@@ -121,6 +122,7 @@ h2 {
   font-family: 'Trirong', serif;
   font-size: 2rem;
   color: #032A2E;
+  margin: 0;
 }
 
 p {
